# B1K-Mesh-Extract_Tool

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
b1k_extractor/: __init__.py  __main__.py  extractor.py  index.py
tests/: test_extractor.py
